--- a/IDS_Assignment-1_Group38.ipynb
+++ b/IDS_Assignment-1_Group38.ipynb
@@ -3436,7 +3436,7 @@
     "Not as easy as writing code :)\n",
     "\n",
     "**Challenges**\n",
-    "Frankly, We felt lost. The more we studied the more questions we got. Truele even now I don't think all our questions are answered.\n",
+    "Frankly, We felt lost. The more we studied the more questions we got. Truely even now I don't think all our questions are answered.\n",
     "ML algorithms and decision on Feature selection approach wass difficult\n",
     "\n",
     "**Decisions made**\n",
