--- a/IDS_Assignment-1_Group38.ipynb
+++ b/IDS_Assignment-1_Group38.ipynb
@@ -155,11 +155,213 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "id": "624e6c58",
    "metadata": {
     "id": "624e6c58"
    },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Identifier</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Ethinicity</th>\n",
+       "      <th>Parent Education</th>\n",
+       "      <th>lunch</th>\n",
+       "      <th>Coaching</th>\n",
+       "      <th>Numerical</th>\n",
+       "      <th>Vocabulary</th>\n",
+       "      <th>Comprehension</th>\n",
+       "      <th>internet</th>\n",
+       "      <th>freetime</th>\n",
+       "      <th>goout</th>\n",
+       "      <th>health</th>\n",
+       "      <th>absences</th>\n",
+       "      <th>Mjob</th>\n",
+       "      <th>Fjob</th>\n",
+       "      <th>reason</th>\n",
+       "      <th>guardian</th>\n",
+       "      <th>traveltime</th>\n",
+       "      <th>studytime</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1001</td>\n",
+       "      <td>female</td>\n",
+       "      <td>group B</td>\n",
+       "      <td>bachelor's degree</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>none</td>\n",
+       "      <td>72</td>\n",
+       "      <td>72</td>\n",
+       "      <td>74</td>\n",
+       "      <td>no</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>at_home</td>\n",
+       "      <td>teacher</td>\n",
+       "      <td>course</td>\n",
+       "      <td>mother</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1002</td>\n",
+       "      <td>female</td>\n",
+       "      <td>group C</td>\n",
+       "      <td>some college</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>69</td>\n",
+       "      <td>90</td>\n",
+       "      <td>88</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>at_home</td>\n",
+       "      <td>other</td>\n",
+       "      <td>course</td>\n",
+       "      <td>father</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1003</td>\n",
+       "      <td>female</td>\n",
+       "      <td>group B</td>\n",
+       "      <td>master's degree</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>none</td>\n",
+       "      <td>90</td>\n",
+       "      <td>95</td>\n",
+       "      <td>93</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>10</td>\n",
+       "      <td>at_home</td>\n",
+       "      <td>other</td>\n",
+       "      <td>other</td>\n",
+       "      <td>mother</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1004</td>\n",
+       "      <td>male</td>\n",
+       "      <td>group A</td>\n",
+       "      <td>associate's degree</td>\n",
+       "      <td>reduced</td>\n",
+       "      <td>none</td>\n",
+       "      <td>47</td>\n",
+       "      <td>57</td>\n",
+       "      <td>44</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>health</td>\n",
+       "      <td>services</td>\n",
+       "      <td>home</td>\n",
+       "      <td>mother</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1005</td>\n",
+       "      <td>male</td>\n",
+       "      <td>group C</td>\n",
+       "      <td>some college</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>none</td>\n",
+       "      <td>76</td>\n",
+       "      <td>78</td>\n",
+       "      <td>75</td>\n",
+       "      <td>no</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>other</td>\n",
+       "      <td>other</td>\n",
+       "      <td>home</td>\n",
+       "      <td>father</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Identifier  Gender Ethinicity    Parent Education     lunch Coaching  \\\n",
+       "0        1001  female    group B   bachelor's degree  standard     none   \n",
+       "1        1002  female    group C        some college  standard      Yes   \n",
+       "2        1003  female    group B     master's degree  standard     none   \n",
+       "3        1004    male    group A  associate's degree   reduced     none   \n",
+       "4        1005    male    group C        some college  standard     none   \n",
+       "\n",
+       "   Numerical  Vocabulary  Comprehension internet  freetime  goout  health  \\\n",
+       "0         72          72             74       no         3      4       3   \n",
+       "1         69          90             88      yes         3      3       3   \n",
+       "2         90          95             93      yes         3      2       3   \n",
+       "3         47          57             44      yes         2      2       5   \n",
+       "4         76          78             75       no         3      2       5   \n",
+       "\n",
+       "   absences     Mjob      Fjob  reason guardian  traveltime  studytime  \n",
+       "0         6  at_home   teacher  course   mother           2          2  \n",
+       "1         4  at_home     other  course   father           1          2  \n",
+       "2        10  at_home     other   other   mother           1          2  \n",
+       "3         2   health  services    home   mother           1          3  \n",
+       "4         4    other     other    home   father           1          2  "
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "##---------first 5 records------------------##\n",
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "45925183",
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -257,7 +459,7 @@
        "      <td>female</td>\n",
        "      <td>group C</td>\n",
        "      <td>bachelor's degree</td>\n",
-       "      <td>free/reduced</td>\n",
+       "      <td>reduced</td>\n",
        "      <td>yes</td>\n",
        "      <td>73</td>\n",
        "      <td>86</td>\n",
@@ -303,7 +505,7 @@
        "      <td>male</td>\n",
        "      <td>group A</td>\n",
        "      <td>master's degree</td>\n",
-       "      <td>free/reduced</td>\n",
+       "      <td>reduced</td>\n",
        "      <td>yes</td>\n",
        "      <td>80</td>\n",
        "      <td>79</td>\n",
@@ -325,43 +527,34 @@
        "</div>"
       ],
       "text/plain": [
-       "       Identifier  Gender Ethinicity   Parent Education         lunch  \\\n",
-       "10014       11015    male    group D        high school      standard   \n",
-       "10015       11016    male    group C  bachelor's degree      standard   \n",
-       "10016       11017  female    group C  bachelor's degree  free/reduced   \n",
-       "10017       11018  female    group A  bachelor's degree      standard   \n",
-       "10018       11019    male    group A    master's degree  free/reduced   \n",
+       "       Identifier  Gender Ethinicity   Parent Education     lunch Coaching  \\\n",
+       "10014       11015    male    group D        high school  standard     none   \n",
+       "10015       11016    male    group C  bachelor's degree  standard     none   \n",
+       "10016       11017  female    group C  bachelor's degree   reduced      yes   \n",
+       "10017       11018  female    group A  bachelor's degree  standard      yes   \n",
+       "10018       11019    male    group A    master's degree   reduced      yes   \n",
        "\n",
-       "      Coaching  Numerical  Vocabulary  Comprehension internet  freetime  \\\n",
-       "10014     none         73          75             78       no         3   \n",
-       "10015     none         79          87             77      yes         2   \n",
-       "10016      yes         73          86             78      yes         2   \n",
-       "10017      yes         87          89             78       no         5   \n",
-       "10018      yes         80          79             83       no         4   \n",
+       "       Numerical  Vocabulary  Comprehension internet  freetime  goout  health  \\\n",
+       "10014         73          75             78       no         3      3       5   \n",
+       "10015         79          87             77      yes         2      1       5   \n",
+       "10016         73          86             78      yes         2      2       2   \n",
+       "10017         87          89             78       no         5      4       1   \n",
+       "10018         80          79             83       no         4      3       2   \n",
        "\n",
-       "       goout  health  absences     Mjob      Fjob      reason guardian  \\\n",
-       "10014      3       5        26  teacher     other        home    other   \n",
-       "10015      1       5        14  teacher     other        home   father   \n",
-       "10016      2       2        13  teacher  services       other   mother   \n",
-       "10017      4       1        31  teacher   at_home        home   father   \n",
-       "10018      3       2        73  at_home     other  reputation    other   \n",
-       "\n",
-       "       traveltime  studytime  \n",
-       "10014           4          3  \n",
-       "10015           1          4  \n",
-       "10016           3          1  \n",
-       "10017           4          1  \n",
-       "10018           2          4  "
+       "       absences     Mjob      Fjob      reason guardian  traveltime  studytime  \n",
+       "10014        26  teacher     other        home    other           4          3  \n",
+       "10015        14  teacher     other        home   father           1          4  \n",
+       "10016        13  teacher  services       other   mother           3          1  \n",
+       "10017        31  teacher   at_home        home   father           4          1  \n",
+       "10018        73  at_home     other  reputation    other           2          4  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "##---------first 5 records------------------##\n",
-    "data.head()\n",
     "##---------last 5 records------------------##\n",
     "data.tail()"
    ]
